007 ==> 371543 - BQM TimeAdjust tool language is wrong.
008 ==> 369051 - Too low similarity threshold in fuzzy/duplicate search bloats the results with potentially unwished high-similarity results [patch].
009 ==> 372217 - The results of the Duplicates are currently sorted by the image id and sortable by name and count if similars. But it should be sortable by the similarity of the duplicates, too. [patch].
010 ==> 372362 - Build error due to private function.
011 ==> 372341 - Title not showing in tool-tip.
012 ==> 372326 - digiKam crashed when closing it.
013 ==> 372314 - I cannot choose the template predefined in the import window while renaming (F2).
014 ==> 372164 - Camera related photograph properties are unavailable (erroneously).
015 ==> 372433 - Reduce debug messages from databaseserver with internal mysql.
016 ==> 372442 - Ordering of duplicates search by the result count is done lexicographically [patch].
017 ==> 366567 - Allow choosing several duplicate results [patch].
018 ==> 274360 - Fuzzy search finds only in few type of pictures.
019 ==> 372380 - Support for digiKam 5.2.0.
020 ==> 372484 - HTML captions only show in right side panel as rendered, not editable source.
021 ==> 372323 - Camera autodetection fails when using AppImage bundle.
022 ==> 372583 - The Similarity in DuplicatesSearch and FuzzySearch should be renamed to Similarity range [patch].
023 ==> 372584 - It is not possible to give a similarity range for duplicates search in maintenance dialog [patch].
024 ==> 372683 - Attempt to set a screen on a child window and DBusMenuExporterPrivate::fillLayoutItem No id for action.
025 ==> 372640 - Can't drag any image file from digikam to GIMP.
026 ==> 370150 - digiKam geolocation editor drag and drop works only at the first edit.
027 ==> 372672 - File Renaming Options sidebar is missing.
028 ==> 372722 - Missing items in albums.
029 ==> 204006 - Automatic renaming of duplicate filenames while importing.
030 ==> 